src/styles/components/_nav.scss
nav {
  a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 1.1rem;
    border-bottom: 2px solid transparent;
    &.active {
      border-color: $primary-color-light;
    }
  }
}


nav.top-nav {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: center;
  justify-content: center;
  padding: 0 1rem;


  a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 1.1rem;
    border-bottom: 2px solid transparent;
    &.active {
      border-color: $primary-color-light;
    }
  }

  .nav-item > a {
    padding: 1rem;
  }

  .dropdown-toggle {
    position: relative;
    
    a {
      display: flex;
      gap: 0.5rem;
      svg {
        fill:   $text-color-primary;
        stroke: $text-color-primary;
        transition: fill 0.1s ease, stroke 0.1s ease;
      }
      &:hover {
        svg {
          fill:   $primary-color-dark;
          stroke: $primary-color-dark;
        }
      }
    }

    ul.dropdown-menu {
      padding: 1rem 1.5rem;
      background-color: $background-color-secondary;
      list-style: none;
      position: absolute;
      z-index: 10;
      margin-top:0;

      transform: translate(-50%, 0);
      left: 50%;
      width: max-content;
      
    }
  }
  
  
}



nav.mobile {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 300px;
  z-index: 10;

  .background {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    width: 300px;
    background: #fff;
  }
  
  button {
    outline: none;
    border: none;
    user-select: none;
    cursor: pointer;
    position: absolute;
    top: 18px;
    left: 5px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background: transparent;
  }
  
  ul,
  li {
    margin: 0;
    padding: 0;
  }
  
  ul {
    padding: 25px;
    position: absolute;
    top: 100px;
    width: 230px;
  }
  
  li {
    list-style: none;
    margin-bottom: 20px;
    display: flex;
    align-items: center;
    cursor: pointer;

    &.nested {
      padding-left: 1rem;
    }
  }
  
  .icon-placeholder {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    flex: 40px 0;
    margin-right: 20px;
  }
  
  .text-placeholder {
    border-radius: 5px;
    width: 200px;
    height: 20px;
    flex: 1;
  }
  
  .refresh {
    padding: 10px;
    position: absolute;
    background: rgba(0, 0, 0, 0.4);
    border-radius: 10px;
    width: 20px;
    height: 20px;
    top: 10px;
    right: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
  }
}

@media all and (max-width: $layout-breakpoint-tablet) {
  nav.top-nav {
    display: none;
  }
  nav.mobile {
    display: block;
  }
}

